--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,48 +7,56 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="finalproject.mae.maptranslate.MainActivity"
-    tools:ignore="MissingPrefix">
+    tools:ignore="MissingPrefix"
+    tools:layout_editor_absoluteY="81dp">
 
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="387dp"
+        android:layout_height="500dp"
         android:layout_below="@+id/takePicButton"
+        app:layout_constraintTop_toBottomOf="@+id/choose_targlang"
         map:mapType="normal"
         map:uiCompass="true"
         map:uiRotateGestures="true"
         map:uiScrollGestures="true"
         map:uiTiltGestures="true"
         map:uiZoomControls="true"
-        map:uiZoomGestures="true" />
+        map:uiZoomGestures="true"
+        tools:layout_editor_absoluteX="0dp" />
 
     <!--<FrameLayout-->
-        <!--android:id="@+id/chooserFragFrame"-->
-        <!--android:layout_width="275dp"-->
-        <!--android:layout_height="89dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="208dp"-->
-        <!--android:layout_weight="50"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.505"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent">-->
+    <!--android:id="@+id/chooserFragFrame"-->
+    <!--android:layout_width="275dp"-->
+    <!--android:layout_height="89dp"-->
+    <!--android:layout_marginEnd="8dp"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:layout_marginTop="208dp"-->
+    <!--android:layout_weight="50"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintHorizontal_bias="0.505"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent">-->
 
     <!--</FrameLayout>-->
 
 
     <ImageButton
         android:id="@+id/takePicButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@android:style/Widget.Holo.ImageButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
+        app:srcCompat="@drawable/basecamera" />
 
     <Spinner
         android:id="@+id/choose_targlang"
@@ -57,20 +65,39 @@
         android:layout_above="@+id/map"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/takePicButton" />
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_toStartOf="@+id/takePicButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/framePicChooser"
+        android:layout_width="271dp"
+        android:layout_height="149dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="156dp"
+        app:layout_constraintEnd_toEndOf="@+id/map"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="@+id/map"
+        app:layout_constraintTop_toBottomOf="@+id/choose_targlang">
+
+    </FrameLayout>
 
     <!--<ImageButton-->
-        <!--android:id="@+id/targetLang"-->
-        <!--android:layout_width="45dp"-->
-        <!--android:layout_height="41dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:scaleType="fitXY"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--map:srcCompat="@drawable/settings" />-->
+    <!--android:id="@+id/targetLang"-->
+    <!--android:layout_width="45dp"-->
+    <!--android:layout_height="41dp"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:scaleType="fitXY"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent"-->
+    <!--map:srcCompat="@drawable/settings" />-->
 
 
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
 
