--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,20 +24,20 @@
         map:uiZoomControls="true"
         map:uiZoomGestures="true" />
 
-    <!--<FrameLayout-->
-        <!--android:id="@+id/chooserFragFrame"-->
-        <!--android:layout_width="275dp"-->
-        <!--android:layout_height="89dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="208dp"-->
-        <!--android:layout_weight="50"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.505"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent">-->
+    <FrameLayout
+        android:id="@+id/chooserFragFrame"
+        android:layout_width="275dp"
+        android:layout_height="89dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="208dp"
+        android:layout_weight="50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!--</FrameLayout>-->
+    </FrameLayout>
 
 
     <ImageButton
