--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -14,6 +14,9 @@
         android:id="@+id/markerText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textColor="@android:color/black"
+        android:scrollbars="vertical"
+        android:maxLines="3"/>
 
 </LinearLayout>
