--- a/app/src/main/res/layout/infowindow_list.xml
+++ b/app/src/main/res/layout/infowindow_list.xml
@@ -3,21 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/Show_Details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="More finalproject.mae.maptranslate.Details" />
+    <!--<Button-->
+        <!--android:id="@+id/Show_Details"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:text="More Details" />-->
 
     <ListView
         android:id="@+id/infowindow_list"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/Show_Details">
+        >
 
     </ListView>
 </RelativeLayout>
