--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,7 +9,5 @@
     <ListView
         android:id="@+id/infowindow_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="-3dp"
-        tools:layout_editor_absoluteY="-10dp" />
+        android:layout_height="match_parent" />
 </RelativeLayout>
