--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -6,17 +6,16 @@
 
     <ImageView
         android:id="@+id/markerImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/cast_abc_scrubber_control_off_mtrl_alpha" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        android:tag="123"/>
 
     <TextView
         android:id="@+id/markerText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textColor="@android:color/black"
-        android:scrollbars="vertical"
-        android:maxLines="3"/>
+        android:layout_weight="1"/>
 
 </LinearLayout>
