--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,13 +11,21 @@
     tools:layout_editor_absoluteY="81dp">
 
 
+
+
+    <Spinner
+        android:id="@+id/choose_targlang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="387dp"
-        android:layout_height="500dp"
-        android:layout_below="@+id/takePicButton"
-        app:layout_constraintTop_toBottomOf="@+id/choose_targlang"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/choose_targlang"
+        android:layout_above="@+id/takePicButton"
+        android:layout_centerHorizontal="true"
         map:mapType="normal"
         map:uiCompass="true"
         map:uiRotateGestures="true"
@@ -25,79 +33,29 @@
         map:uiTiltGestures="true"
         map:uiZoomControls="true"
         map:uiZoomGestures="true"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="8dp" />
 
-    <!--<FrameLayout-->
-    <!--android:id="@+id/chooserFragFrame"-->
-    <!--android:layout_width="275dp"-->
-    <!--android:layout_height="89dp"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="208dp"-->
-    <!--android:layout_weight="50"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintHorizontal_bias="0.505"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent">-->
+    <FrameLayout
+        android:id="@+id/framePicChooser"
+        android:layout_width="271dp"
+        android:layout_height="149dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true">
 
-    <!--</FrameLayout>-->
-
+    </FrameLayout>
 
     <ImageButton
         android:id="@+id/takePicButton"
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:background="@null"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/basecamera" />
 
-    <Spinner
-        android:id="@+id/choose_targlang"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/map"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_toStartOf="@+id/takePicButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <FrameLayout
-        android:id="@+id/framePicChooser"
-        android:layout_width="271dp"
-        android:layout_height="149dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="156dp"
-        app:layout_constraintEnd_toEndOf="@+id/map"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="@+id/map"
-        app:layout_constraintTop_toBottomOf="@+id/choose_targlang">
-
-    </FrameLayout>
-
-    <!--<ImageButton-->
-    <!--android:id="@+id/targetLang"-->
-    <!--android:layout_width="45dp"-->
-    <!--android:layout_height="41dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:scaleType="fitXY"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent"-->
-    <!--map:srcCompat="@drawable/settings" />-->
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
 
